--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -1,8 +1,19 @@
-h1 {
+body {
+  background-color: black;
   font-family: verdana;
+  text-align: center;
+  image-orientation: center;
+  color: white;
+}
+
+h1 {
   font-weight: normal;
   font-size: 50px;
-  color: white;
+}
+
+h2 {
+  font-size: 42px;
+  font-weight: 300;
 }
 
 a {
@@ -10,7 +21,7 @@ a {
   font-size: 16px;
 }
 
-body {
-  background-color: black;
-  text-align: center;
+p {
+  color: gray;
+  font-size: 21px;
 }
